--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -18,6 +18,11 @@
         margin-right: -10rem;
     }
 
+    @media only screen and (min-width: 51em) and (max-width: 70em) {
+        margin-left: -10rem;
+        height: auto;
+    }
+
     &__nav {
         grid-column: 1 / 2;
         margin-top: 10rem;
