--- a/css/style.css
+++ b/css/style.css
@@ -525,8 +525,7 @@ html {
   @media only screen and (min-width: 51em) and (max-width: 70em) {
     .about {
       margin-left: -10rem;
-      margin-top: -20rem;
-      height: auto; } }
+      margin-top: -20rem; } }
   .about__img {
     width: 100%;
     padding: 10rem;
