--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,10 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%; }
-  @media only screen and (max-width: 76em) {
+  @media only screen and (max-width: 40em) {
+    html {
+      font-size: 25%; } }
+  @media only screen and (min-width: 41em) and (max-width: 76em) {
     html {
       font-size: 50%; } }
 
