--- a/css/style.css
+++ b/css/style.css
@@ -282,7 +282,7 @@ html {
   padding-left: 41.5%; }
   @media only screen and (max-width: 50em) {
     .footer {
-      padding-top: 24.5rem; } }
+      padding-top: 18rem; } }
 
 #centered__footer {
   margin-top: -20rem;
@@ -311,12 +311,16 @@ html {
     width: 100%; }
     @media only screen and (max-width: 50em) {
       .home__data--img {
+        margin-top: 24rem;
         width: 120%; } }
     .home__data--img > img {
       width: 100%;
       height: 75rem;
       object-fit: cover;
       margin-bottom: -0.5rem; }
+      @media only screen and (max-width: 50em) {
+        .home__data--img > img {
+          height: 120rem; } }
   .home__data > .home__data--name {
     width: 100%;
     text-align: center;
@@ -325,7 +329,7 @@ html {
       .home__data > .home__data--name {
         position: absolute;
         left: 10rem;
-        top: -8rem; } }
+        top: -3rem; } }
   .home__data > .home__data--name > h1 {
     width: 200%;
     font-family: 'Notable', sans-serif;
@@ -365,7 +369,7 @@ html {
       .home__data > .home__data--social {
         display: flex;
         position: absolute;
-        top: 8rem; } }
+        top: 13rem; } }
     @media only screen and (max-width: 84.5em) {
       .home__data > .home__data--social {
         grid-template-columns: 1fr;
