--- a/css/style.css
+++ b/css/style.css
@@ -296,6 +296,9 @@ html {
   margin-right: -10rem;
   height: 80vh;
   width: 100%; }
+  @media only screen and (max-width: 70em) {
+    .home {
+      height: auto; } }
   .home__data {
     margin-top: -18.5rem;
     display: flex;
