--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -4,6 +4,10 @@
     height: 80vh;
     width: 100%;
 
+    @media only screen and (max-width: 70em) {
+        height: auto;
+    }
+
     &__data {
         margin-top: -18.5rem;
         display: flex;
