--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -13,7 +13,8 @@
     padding-left: 41.5%;
 
     @media only screen and (max-width: 50em) {
-        padding-top: 18rem;
+        position: absolute;
+        top: -5rem;
     }
 }
 
