--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -26,7 +26,7 @@
         width: 100%;
 
         @media only screen and (max-width: 50em) {
-            margin-top: 24rem;
+            margin-top: 9rem;
             width: 120%;
         }
 
@@ -37,7 +37,8 @@
             margin-bottom: -0.5rem;
             
             @media only screen and (max-width: 50em) {
-                height: 120rem;
+                // height: 120rem;
+                height: 100%;
             }
         }
     }
