adjust position of footer for small screens

--- a/css/style.css
+++ b/css/style.css
@@ -283,7 +283,8 @@ html {
   @media only screen and (max-width: 50em) {
     .footer {
       position: absolute;
-      top: -5rem; } }
+      top: -5rem;
+      left: 1.5rem; } }
 
 #centered__footer {
   margin-top: -20rem;
