--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -15,6 +15,7 @@
     @media only screen and (max-width: 50em) {
         position: absolute;
         top: -5rem;
+        left: 1.5rem;
     }
 }
 
