--- a/css/style.css
+++ b/css/style.css
@@ -283,7 +283,7 @@ html {
   @media only screen and (max-width: 50em) {
     .footer {
       position: absolute;
-      top: -5rem;
+      top: -6rem;
       left: 1.5rem; } }
 
 #centered__footer {
@@ -316,7 +316,7 @@ html {
     width: 100%; }
     @media only screen and (max-width: 50em) {
       .home__data--img {
-        margin-top: 9rem;
+        margin-top: 12rem;
         width: 120%; } }
     .home__data--img > img {
       width: 100%;
@@ -374,7 +374,8 @@ html {
       .home__data > .home__data--social {
         display: flex;
         position: absolute;
-        top: 13rem; } }
+        top: 9rem;
+        right: 3rem; } }
     @media only screen and (max-width: 84.5em) {
       .home__data > .home__data--social {
         grid-template-columns: 1fr;
