--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -14,8 +14,8 @@
 
     @media only screen and (max-width: 50em) {
         position: absolute;
-        top: -6rem;
-        left: 1.5rem;
+        top: -6.5rem;
+        right: 2.5rem;
     }
 }
 
