--- a/css/style.css
+++ b/css/style.css
@@ -283,7 +283,7 @@ html {
   @media only screen and (max-width: 50em) {
     .footer {
       position: absolute;
-      top: -6.5rem;
+      top: -7.5rem;
       right: 2.5rem; } }
 
 #centered__footer {
@@ -374,8 +374,8 @@ html {
       .home__data > .home__data--social {
         display: flex;
         position: absolute;
-        top: 10rem;
-        right: 3rem; } }
+        top: 6.5rem;
+        right: 0; } }
     @media only screen and (max-width: 84.5em) {
       .home__data > .home__data--social {
         grid-template-columns: 1fr;
@@ -387,6 +387,10 @@ html {
       height: 3.5rem;
       opacity: .7;
       grid-column: 2 / 3; }
+      @media only screen and (max-width: 50em) {
+        .home__data > .home__data--social img {
+          width: 6rem;
+          height: 2.625rem; } }
     .home__data > .home__data--social img.linkedin-logo {
       width: 3.5rem;
       height: 3.5rem;
@@ -396,6 +400,8 @@ html {
       filter: invert(100%); }
       @media only screen and (max-width: 50em) {
         .home__data > .home__data--social img.linkedin-logo {
+          width: 2.625rem;
+          height: 2.625rem;
           margin-left: -4rem; } }
     .home__data > .home__data--social img:hover,
     .home__data > .home__data--social img:active {
