adjust pos of home pg elements for sm screens

--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -51,7 +51,7 @@
         @media only screen and (max-width: 50em) {
             position: absolute;
             left: 10rem;
-            top: -6rem;
+            top: -3rem;
         }
     }
 
@@ -103,8 +103,8 @@
             display: flex;
 
             position: absolute;
-            top: 6.5rem;
-            right: 0;
+            top: 8rem;
+            right: -3rem;
         }
 
         @media only screen and (max-width: 84.5em) {
