--- a/css/style.css
+++ b/css/style.css
@@ -334,7 +334,7 @@ html {
       .home__data > .home__data--name {
         position: absolute;
         left: 10rem;
-        top: -6rem; } }
+        top: -3rem; } }
   .home__data > .home__data--name > h1 {
     width: 200%;
     font-family: 'Notable', sans-serif;
@@ -374,8 +374,8 @@ html {
       .home__data > .home__data--social {
         display: flex;
         position: absolute;
-        top: 6.5rem;
-        right: 0; } }
+        top: 8rem;
+        right: -3rem; } }
     @media only screen and (max-width: 84.5em) {
       .home__data > .home__data--social {
         grid-template-columns: 1fr;
