--- a/css/style.css
+++ b/css/style.css
@@ -540,10 +540,7 @@ html {
   width: 100%; }
   @media only screen and (max-width: 50em) {
     .about {
-      margin-right: -10rem; } }
-  @media only screen and (min-width: 51em) and (max-width: 70em) {
-    .about {
-      margin-left: -10rem;
+      margin-right: -10rem;
       margin-top: -20rem; } }
   .about__img {
     width: 100%;
