--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -6,12 +6,13 @@
 
     @media only screen and (max-width: 50em) {
         margin-right: -10rem;
-    }
-
-    @media only screen and (min-width: 51em) and (max-width: 70em) {
-        margin-left: -10rem;
         margin-top: -20rem;
     }
+
+    // @media only screen and (min-width: 51em) and (max-width: 70em) {
+    //     margin-left: -10rem;
+    //     margin-top: -20rem;
+    // }
 
     &__img {
         width: 100%;
