--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -4,15 +4,14 @@
     height: 80vh;
     width: 100%;
 
-    @media only screen and (max-width: 50em) {
-        margin-right: -10rem;
-        margin-top: -10rem;
-    }
-
-    // @media only screen and (min-width: 51em) and (max-width: 70em) {
-    //     margin-left: -10rem;
-    //     margin-top: -20rem;
+    // @media only screen and (max-width: 50em) {
+    //     margin-right: -10rem;
     // }
+
+    @media only screen and (min-width: 51em) and (max-width: 70em) {
+        margin-left: -10rem;
+        margin-top: -20rem;
+    }
 
     &__img {
         width: 100%;
