--- a/css/style.css
+++ b/css/style.css
@@ -538,6 +538,10 @@ html {
   grid-template-columns: 50rem 1fr;
   height: 80vh;
   width: 100%; }
+  @media only screen and (max-width: 50em) {
+    .about {
+      margin-right: -10rem;
+      margin-top: 0; } }
   @media only screen and (min-width: 51em) and (max-width: 70em) {
     .about {
       margin-left: -10rem;
