--- a/css/style.css
+++ b/css/style.css
@@ -599,6 +599,9 @@ html {
   .about__form--info > .about--wrapper {
     margin-bottom: 1.5rem;
     padding-bottom: 0.5rem; }
+    @media only screen and (max-width: 50em) {
+      .about__form--info > .about--wrapper {
+        margin-bottom: 0.5rem; } }
     .about__form--info > .about--wrapper:not(:last-child) {
       border-bottom: 2px dotted #202020; }
     .about__form--info > .about--wrapper:last-child {
