--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -90,6 +90,10 @@
         margin-bottom: 1.5rem;
         padding-bottom: 0.5rem;
 
+        @media only screen and (max-width: 50em) {
+            margin-bottom: 0.5rem;
+        }
+
         &:not(:last-child) {
             border-bottom: 2px dotted $color-primary-dark;
         }
