--- a/css/style.css
+++ b/css/style.css
@@ -622,7 +622,8 @@ html {
       @media only screen and (max-width: 50em) {
         .about__form--info > .about--wrapper #details, .about__form--info > .about--wrapper #actions, .about__form--info > .about--wrapper #inventory {
           font-size: 1.2rem;
-          padding-bottom: 3rem; } }
+          padding-bottom: 3rem;
+          padding-left: 2rem; } }
     .about__form--info > .about--wrapper #actions,
     .about__form--info > .about--wrapper #inventory {
       font-family: 'Redacted Script', sans-serif; }
