--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -120,6 +120,7 @@
             @media only screen and (max-width: 50em) {
                 font-size: 1.2rem;
                 padding-bottom: 3rem;
+                padding-left: 2rem;
             }
         }
 
