--- a/css/style.css
+++ b/css/style.css
@@ -541,7 +541,7 @@ html {
   @media only screen and (max-width: 50em) {
     .about {
       margin-right: -10rem;
-      margin-top: 0; } }
+      margin-top: -5rem; } }
   @media only screen and (min-width: 51em) and (max-width: 70em) {
     .about {
       margin-left: -10rem;
