--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -6,7 +6,7 @@
 
     @media only screen and (max-width: 50em) {
         margin-right: -10rem;
-        margin-top: 0;
+        margin-top: -5rem;
     }
 
     @media only screen and (min-width: 51em) and (max-width: 70em) {
