--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -117,7 +117,7 @@
         & > #dreamOffer-img {
 
             @media only screen and (max-width: 50em) {
-                margin-left: -5rem;
+                margin-left: -8rem;
             }
         }
 
@@ -138,6 +138,10 @@
         font-size: 1.8rem;
         text-align: center;
         padding: 1.2rem 0;
+
+        @media only screen and (max-width: 50em) {
+            padding-top: 0;
+        }
     }
 
     &__container > .project > .project__data > .project--title > a > img {
