--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -142,14 +142,17 @@
         }
     }
 
+    &__container > .project > .project__data {
+
+        @media only screen and (max-width: 50em) {
+            margin-top: -2rem;
+        }
+    }
+
     &__container > .project > .project__data > .project--title {
         font-size: 1.8rem;
         text-align: center;
         padding: 1.2rem 0;
-
-        @media only screen and (max-width: 50em) {
-            padding-top: 0;
-        }
     }
 
     &__container > .project > .project__data > .project--title > a > img {
