move entire projects page up 3rem

--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -16,6 +16,7 @@
         grid-template-rows: min-content 1fr;
 
         margin-right: -10rem;
+        margin-top: -3rem;
     }
 
     @media only screen and (min-width: 51em) and (max-width: 70em) {
