--- a/css/style.css
+++ b/css/style.css
@@ -422,7 +422,8 @@ html {
     .projects {
       grid-template-columns: 1fr;
       grid-template-rows: min-content 1fr;
-      margin-right: -10rem; } }
+      margin-right: -10rem;
+      margin-top: -3rem; } }
   @media only screen and (min-width: 51em) and (max-width: 70em) {
     .projects {
       margin-left: -10rem;
