--- a/src/index.css
+++ b/src/index.css
@@ -29,10 +29,24 @@
   padding: 0;
 }
 
+html {
+  position: relative;
+}
+
 body {
   background: var(--backgroundColor);
   font-family: var(--mainFont);
   color: var(--fontColor);
+}
+
+/*   ----- Toggle Button  -----  */
+.toggle-btn {
+  position: absolute;
+  top: 3px;
+  left: 25px;
+  font-size: 2.5rem;
+  background: var(--backgroundColor);
+  padding: 0 1px;
 }
 
 main {
@@ -40,4 +54,5 @@ main {
   width: calc(100vw - 40px);
   height: calc(100vh - 40px);
   margin: 20px;
+  padding: 1.5rem;
 }
