Add styles for footer

--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@ body {
   color: var(--fontColor);
 }
 
-/*   ----- Toggle Button  -----  */
+/*   ----- Header - Toggle Button  -----  */
 .toggle-btn {
   position: absolute;
   top: 5px;
@@ -52,6 +52,7 @@ body {
   cursor: pointer;
 }
 
+/*   ----- Main  -----  */
 main {
   width: calc(100vw - 50px);
   height: calc(100vh - 50px);
@@ -65,6 +66,16 @@ main {
   main {
     border: 1px solid var(--fontColor);
   }
+}
+
+/*   ----- Footer  -----  */
+footer {
+  display: flex;
+  gap: .3rem;
+  position: absolute;
+  bottom: 5px;
+  width: 100%;
+  justify-content: center;
 }
 
 /*   ----- HomePage  -----  */
@@ -148,7 +159,7 @@ main {
 .nav-links {
   font-family: var(--navFont);
   /* font-size: 9.5vh; */
-  font-size: 16vw;
+  font-size: 15vw;
   margin-top: 2rem;
 }
 
