--- a/src/index.css
+++ b/src/index.css
@@ -60,6 +60,7 @@ main {
   padding: 3.5rem 1.5rem;
   border-top: 1px solid var(--fontColor);
   /* border-bottom: 1px solid var(--fontColor); */
+  overflow: auto;
 }
 
 @media screen and (min-width: 600px) {
@@ -73,7 +74,7 @@ footer {
   display: flex;
   gap: .3rem;
   position: absolute;
-  bottom: 5px;
+  bottom: 3px;
   width: 100%;
   justify-content: center;
 }
@@ -124,6 +125,8 @@ footer {
 .info-description {
   font-family: var(--secondaryFont);
   font-size: 1.5rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .btn-text, .btn-text:visited {
@@ -155,17 +158,88 @@ footer {
   transform: scaleX(1);
 }
 
-/*   ----- NavLinks  -----  */
+.small {
+  font-size: 1.2rem;
+}
+
+/*   ----- Info/About  -----  */
+.info-description--long {
+  font-size: .9rem;
+  font-family: var(--secondaryFont);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding-bottom: 1rem;
+}
+
+.skills {
+  padding-left: .5rem;
+  width: 80vw;
+}
+
+.skills-header {
+  display: flex;
+  align-items: center;
+  gap: .3rem;
+}
+
+.skills-header > h5 {
+  font-size: 1.7rem;
+  letter-spacing: 2px;
+}
+
+.line {
+  display: inline-block;
+  height: 1px;
+  width: 100%;
+  background: var(--fontColor);
+}
+
+.skills-list {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-left: 10px;
+  margin-right: 40px;
+}
+
+/*   ----- SkillList Component -----  */
+.category-container {
+  margin-bottom: .6rem;
+}
+
+.category-title {
+  font-size: 1.1rem;
+  font-weight: normal;
+  position: relative;
+  width: fit-content;
+}
+
+.category-title::after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  content: "";
+  width: 100%;
+  height: 1px;
+  background: var(--fontColor);
+}
+
+.category-list {
+  list-style: none;
+  padding: .25rem;
+}
+
+/*   ----- NavLinks Component -----  */
 .nav-links {
   font-family: var(--navFont);
   /* font-size: 9.5vh; */
   font-size: 15vw;
-  margin-top: 2rem;
+  margin-top: .5rem;
 }
 
-@media screen and (min-width: 450px) {
+@media screen and (min-width: 500px) {
   .nav-links {
-    font-size: 9.5vh;
+    font-size: 8.5vw;
   }
 }
 
