--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
   --backgroundColor: #F1ECE1;
   --fontColor: #1a1818;
   --fontColorSecondary: #6a6565;
+  --fontColorTertiary: #9A9292;
 
   /* fonts */
   --mainFont: 'Montserrat', sans-serif;
@@ -59,6 +60,59 @@ body {
   transform: scale(1.1);
 }
 
+.hero-container {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 30px;
+  left: 35px;
+}
+
+.hero {
+  display: flex;
+  gap: var(--smallMargin);
+  align-items: center;
+}
+
+.hero > h4 {
+  font-size: 1.3rem;
+  font-weight: 400;
+  letter-spacing: 1px;
+}
+
+.social-links {
+  display: flex;
+  gap: var(--smallMargin);
+  align-items: center;
+  color: var(--fontColorSecondary);
+}
+
+.github-logo {
+  font-size: 2.3rem;
+  cursor: pointer;
+}
+
+.github-logo:hover {
+  color: var(--fontColor);
+}
+
+.linkedin-logo {
+  font-size: 1.1rem;
+  cursor: pointer;
+}
+
+.linkedin-logo:hover {
+  color: var(--fontColor);
+}
+
+.roles {
+  font-family: var(--mainFont);
+  color: var(--fontColorTertiary);
+  font-size: 1rem;
+  width: 60%;
+  margin-top: -5px;
+}
+
 /*   ----- Main  -----  */
 main {
   width: calc(100vw - 50px);
@@ -66,8 +120,8 @@ main {
   margin: var(--mainMargin);
   border-top: 1px solid var(--fontColor);
   padding: 3.5rem .5rem;
-  /* border-bottom: 1px solid var(--fontColor); */
   overflow: auto;
+  /* position: relative; */
 }
 
 @media screen and (min-width: 600px) {
@@ -88,10 +142,27 @@ footer {
 }
 
 /*   ----- HomePage  -----  */
+.homepage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 33.3%;
+}
+
+@media screen and (min-width: 700px) {
+  .homepage {
+    padding-top: 0;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    left: 50%;
+  }
+}
+
+/*   ----- old HomePage  -----  */
 .bio {
   display: flex;
   flex-direction: column;
-  /* gap: .2rem; */
 }
 
 .bio-header {
@@ -101,12 +172,11 @@ footer {
 }
 
 .bio-header > h4 {
-  /* font-size: 1.3rem; */
   font-size: 1.3rem;
   letter-spacing: 2px;
 }
 
-.social-links {
+/* .social-links {
   display: flex;
   gap: var(--smallMargin);
   align-items: center;
@@ -121,13 +191,12 @@ footer {
 .linkedin-logo {
   font-size: 1.1rem;
   cursor: pointer;
-}
+} */
 
 .home-info-description-container {
   display: flex;
   flex-direction: column;
   word-wrap: break-word;
-  /* line-height: 1.5rem; */
 }
 
 .info-header {
@@ -135,9 +204,6 @@ footer {
   color: var(--fontColorSecondary);
   font-size: .75rem;
   letter-spacing: .05rem;
-  /* margin: .8rem 0; */
-  /* margin-bottom: .8rem; */
-  /* margin-top: -.3rem; */
   line-height: 1.2rem;
 }
 
@@ -172,8 +238,6 @@ footer {
   font-family: var(--secondaryFont);
   text-decoration: none;
   color: var(--fontColor);
-  /* border-bottom: 1px solid var(--fontColor); */
-  /* display: block; */
 }
 
 .resume-btn::after {
@@ -206,9 +270,6 @@ footer {
   height: 3.5rem;
   overflow: hidden;
   text-overflow: ellipsis;
-  /* display: flex;
-  flex-direction: column;
-  gap: .7rem; */
 }
 
 .show {
@@ -253,25 +314,7 @@ footer {
   transform: scale(1.2);
 }
 
-/* .ellipsis::after {
-  content: "";
-  position: absolute;
-  width: 92%;
-  height: 2px;
-  bottom: 0;
-  left: 0;
-  background-color: var(--fontColor);
-  transform-origin: bottom left;
-  transition: transform 0.2s ease-out;
-  transform: scaleX(0);
-} */
-
-/* .ellipsis:hover::after {
-  transform: scaleX(1);
-} */
-
 .skills {
-  /* width: 80vw; */
   width: 100%;
   position: relative;
   margin-top: 1.5rem;
@@ -357,18 +400,40 @@ footer {
 /*   ----- NavLinks Component -----  */
 .nav-links {
   font-family: var(--navFont);
-  /* font-size: 9.5vh; */
   font-weight: 600;
   letter-spacing: .25rem;
-  font-size: 19vw;
-  margin-top: .5rem;
+  font-size: 3rem;
 }
 
-@media screen and (min-width: 500px) {
+/* @media screen and (min-width: 720px) {
   .nav-links {
-    font-size: 8.5vw;
+    font-size: 6rem;
   }
 }
+
+@media screen and (min-height: 600px) {
+  .nav-links {
+    font-size: 5rem;
+  }
+}
+
+@media screen and (min-height: 300px) {
+  .nav-links {
+    font-size: 4rem;
+  }
+}
+
+@media screen and (max-width: 470px) {
+  .nav-links {
+    font-size: 3rem;
+  }
+}
+
+@media screen and (max-height: 470px) {
+  .nav-links {
+    font-size: 3rem;
+  }
+} */
 
 .nav-links > ul {
   list-style: none;
@@ -383,10 +448,13 @@ li {
   text-decoration: none;
   color: inherit;
   display: inline-block;
+  font-weight: normal;
 }
 
 .link:hover {
   transform: skewX(-10deg);
+  font-weight: bolder;
+
 }
 
 .nav-links > ul > li:hover {
