--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,9 @@
   --fontColor: #1a1818;
   --fontColorSecondary: #6a6565;
   --fontColorTertiary: #9A9292;
+  --highlightBlue: #0096D6;
+  /* --highlightBlue: #00A699; */
+  --highlightBlue--dark: #006AFF;
 
   /* fonts */
   --mainFont: 'Montserrat', sans-serif;
@@ -44,8 +47,17 @@ body {
   color: var(--fontColor);
 }
 
-/*   ----- Header - Toggle Button  -----  */
+/*   ----- Header  -----  */
+/* .header {
+  z-index: 11;
+  background: var(--backgroundColor);
+  width: fit-content;
+  height: 100%;
+} */
+
+/*   ----- Toggle Button  -----  */
 .toggle-btn {
+  width: fit-content;
   position: absolute;
   top: 5px;
   right: 30px;
@@ -122,6 +134,7 @@ main {
   padding: 3.5rem .5rem;
   overflow: auto;
   /* position: relative; */
+  overflow: hidden;
 }
 
 @media screen and (min-width: 600px) {
@@ -159,61 +172,183 @@ footer {
   }
 }
 
-/*   ----- old HomePage  -----  */
-.bio {
+/*   ----- About  -----  */
+.about-page {
   display: flex;
   flex-direction: column;
-}
-
-.bio-header {
-  display: flex;
-  gap: var(--smallMargin);
   align-items: center;
+  padding-top: 2rem;
 }
 
-.bio-header > h4 {
+.about-container {
+  width: 100%;
+  position: relative;
+  margin-top: 0.5rem;
+}
+
+.about-container > .line {
+  display: inline-block;
+  height: 1px;
+  width: 100%;
+  background: var(--fontColor);
+}
+
+.about-header {
+  display: flex;
+  align-items: center;
+  gap: .3rem;
+  position: absolute;
+  top: -2px;
+  left: 5px;
+  background: var(--backgroundColor);
+}
+
+.about-header > h5 {
+  font-size: 1.6rem;
+  letter-spacing: 1.5px;
+  font-family: var(--navFont);
+  padding: 0 0.15rem;
+}
+
+.about-text {
+  /* margin-top: 1.3rem;
+  padding: 0 1rem; */
+  padding-left: 15px;
+  margin: 1.3rem 1rem;
+}
+
+.skills-container {
+  width: 100%;
+  position: relative;
+  margin-top: 1.5rem;
+}
+
+.skills-container > .line {
+  display: inline-block;
+  height: 1px;
+  width: 100%;
+  background: var(--fontColor);
+}
+
+.show-btn--skills {
+  width: fit-content;
+  position: absolute;
+  right: 5px;
+  top: 5px;
   font-size: 1.3rem;
-  letter-spacing: 2px;
+  border: none;
+  background: var(--backgroundColor);
+  cursor: pointer;
+  transition: .2s ease-in-out;
 }
 
-/* .social-links {
+.show-btn--skills:hover {
+  transform: scale(1.2);
+}
+
+.skills-header {
   display: flex;
-  gap: var(--smallMargin);
   align-items: center;
-  padding-top: 2px;
+  gap: .3rem;
+  position: absolute;
+  top: -2px;
+  left: 5px;
+  background: var(--backgroundColor);
 }
 
-.github-logo {
-  font-size: 2.3rem;
-  cursor: pointer;
+.skills-header > h5 {
+  font-size: 1.6rem;
+  letter-spacing: 1.5px;
+  font-family: var(--navFont);
 }
 
-.linkedin-logo {
-  font-size: 1.1rem;
-  cursor: pointer;
-} */
+.empty {
+  margin-bottom: 1.8rem;
+}
 
-.home-info-description-container {
+.skills-list {
   display: flex;
   flex-direction: column;
-  word-wrap: break-word;
+  justify-content: space-between;
+  padding-left: 15px;
+  margin: 1.8rem 1rem;
 }
 
-.info-header {
-  font-family: var(--mainFont);
+/*   ----- SkillList Component -----  */
+.category-container {
+  margin: .25rem 0;
+}
+
+.category-title {
+  /* font-size: 1.1rem; */
+  font-size: 1.2rem;
+  font-weight: normal;
+  position: relative;
+  width: fit-content;
+  margin-bottom: 0.25rem;
+}
+
+.category-title::after {
+  position: absolute;
+  bottom: -1px;
+  left: 0;
+  content: "";
+  width: 100%;
+  height: 1px;
+  background: var(--fontColor);
+}
+
+.category-list {
+  list-style: none;
+  padding: .6rem .25rem;
+
+  display: flex;
+  /* justify-content: space-between; */
+  gap: 0.1rem;
+  /* display: grid;
+  grid-template-columns: repeat(3, 1fr); */
+}
+
+.skill-wrapper {
+  position: relative;
+  padding-right: 2rem;
+}
+
+.skill {
+  cursor: pointer;
+  font-size: 1.8rem;
   color: var(--fontColorSecondary);
-  font-size: .75rem;
-  letter-spacing: .05rem;
-  line-height: 1.2rem;
+  transition: all 0.2s ease-in;
 }
 
-.info-description {
-  font-family: var(--secondaryFont);
-  font-size: .875rem;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  margin-top: var(--smallMargin);
-  line-height: 1.3rem;
+.hoverBubble {
+  position: absolute;
+  top: 35px;
+  left: 39%;
+  transform: translateX(-61%);
+  background-color: rgb(255, 254, 248);
+  border-radius: 5px;
+  padding: 3px 7px;
+  text-align: center;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
+  visibility: hidden;
+}
+
+.hoverBubble > h3 {
+  font-size: .9rem;
+  letter-spacing: 1px;
+  color: var(--highlightBlue--dark);
+}
+
+.skill:hover {
+  /* color: var(--fontColor); */
+  color: var(--highlightBlue);
+  transform: scale(1.2);
+}
+
+.skill-wrapper > .skill:hover ~ .hoverBubble {
+  visibility: visible;
+  z-index: 11;
 }
 
 /*   ----- Resume Button  -----  */
@@ -261,179 +396,41 @@ footer {
   font-size: .8rem;
 }
 
-.small {
-  font-size: 1.2rem;
-}
-
-/*   ----- Info/About  -----  */
-.about-info-description-container {
-  height: 3.5rem;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.show {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: .7rem;
-}
-
-.long {
-  font-size: 1rem;
-}
-
-.show > .long {
-  line-height: 1.4rem;
-}
-
-.show-btn--text {
-  border: none;
-  background-color: inherit;
-  width: fit-content;
-  margin: -.1rem 0 .9rem 0;
-  padding-left: .2rem;
-  letter-spacing: 3px;
-  font-size: 1.1rem;
-  cursor: pointer;
-  position: relative;
-  transition: .2s ease-in-out;
-}
-
-.show-btn--text:hover {
-  transform: scale(1.2);
-}
-
-.ellipsis {
-  margin-top: -.4rem;
-  transition: .2s ease-in-out;
-  position: relative;
-}
-
-.ellipsis:hover {
-  transform: scale(1.2);
-}
-
-.skills {
-  width: 100%;
-  position: relative;
-  margin-top: 1.5rem;
-}
-
-.line {
-  display: inline-block;
-  height: 1px;
-  width: 100%;
-  background: var(--fontColor);
-}
-
-.show-btn--skills {
-  position: absolute;
-  right: 5px;
-  top: 5px;
-  font-size: 1.3rem;
-  border: none;
-  background: var(--backgroundColor);
-  cursor: pointer;
-  transition: .2s ease-in-out;
-}
-
-.show-btn--skills:hover {
-  transform: scale(1.2);
-}
-
-.skills-header {
-  display: flex;
-  align-items: center;
-  gap: .3rem;
-  position: absolute;
-  top: -2px;
-  left: 5px;
-  background: var(--backgroundColor);
-}
-
-.skills-header > h5 {
-  font-size: 1.6rem;
-  letter-spacing: 2px;
-}
-
-.empty {
-  margin-bottom: 1.8rem;
-}
-
-.skills-list {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding-left: 10px;
-  margin-right: 40px;
-  margin-top: 1rem;
-}
-
-/*   ----- SkillList Component -----  */
-.category-container {
-  margin-bottom: .6rem;
-}
-
-.category-title {
-  font-size: 1.1rem;
-  font-weight: normal;
-  position: relative;
-  width: fit-content;
-}
-
-.category-title::after {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  content: "";
-  width: 100%;
-  height: 1px;
-  background: var(--fontColor);
-}
-
-.category-list {
-  list-style: none;
-  padding: .25rem;
-}
-
 /*   ----- NavLinks Component -----  */
 .nav-links {
   font-family: var(--navFont);
   font-weight: 600;
   letter-spacing: .25rem;
   font-size: 3rem;
+  margin-bottom: var(--mainMargin);
 }
 
-/* @media screen and (min-width: 720px) {
-  .nav-links {
-    font-size: 6rem;
-  }
+.about-page > .nav-links {
+  font-size: 1.1rem;
+  /* margin-top: -1.3rem; */
+  position: absolute;
+  top: 0;
+  left: 35px;
 }
 
-@media screen and (min-height: 600px) {
-  .nav-links {
-    font-size: 5rem;
-  }
+.about-page > .nav-links > ul {
+  display: flex;
+  align-items: center;
+  gap: 35px;
 }
 
-@media screen and (min-height: 300px) {
-  .nav-links {
-    font-size: 4rem;
-  }
+.about-page > .nav-links > ul > li {
+  position: relative;
 }
 
-@media screen and (max-width: 470px) {
-  .nav-links {
-    font-size: 3rem;
-  }
+.about-page > .nav-links > ul > li:not(:last-child):after {
+  content: '-';
+  position: absolute;
+  top: -5px;
+  font-size: 1.8rem;
+  font-weight: 500;
+  padding-left: 0.68rem;
 }
-
-@media screen and (max-height: 470px) {
-  .nav-links {
-    font-size: 3rem;
-  }
-} */
 
 .nav-links > ul {
   list-style: none;
@@ -457,6 +454,35 @@ li {
 
 }
 
+.about-page > .nav-links > ul > li > .link {
+  position: relative;
+}
+
+/* .about-page > .nav-links > ul > li > .link:after {
+  content: '';
+  width: 100%;
+  height: 1px;
+  bottom: -3px;
+  left: 0;
+  background-color: var(--fontColor);
+  position: absolute;
+  transform-origin: bottom left;
+  transition: transform 0.2s ease-out;
+  transform: scaleX(0);
+} */
+
+/* .about-page > .nav-links > ul > li:hover > .link:after {
+  transform: scaleX(1);
+} */
+
+.about-page > .nav-links > ul > li > .link:hover {
+  transform: none;
+}
+
 .nav-links > ul > li:hover {
   transform: translateX(2%);
+}
+
+.about-page > .nav-links > ul > li:hover {
+  transform: none;
 }
