--- a/src/index.css
+++ b/src/index.css
@@ -10,12 +10,14 @@
 /*   ----- Variables  -----  */
 :root {
   /* colors */
+  --white: #fff;
   --backgroundColor: #F1ECE1;
+  --cardColor: #fffdfa;
   --fontColor: #1a1818;
   --fontColorSecondary: #6a6565;
   --fontColorTertiary: #9A9292;
   --highlightBlue: #0096D6;
-  /* --highlightBlue: #00A699; */
+  --highlightOrange: #f80000;
   --highlightBlue--dark: #006AFF;
 
   /* fonts */
@@ -26,6 +28,9 @@
   /* sizes */
   --smallMargin: .5rem;
   --mainMargin: 25px;
+  --borderRadius: 0.25rem;
+
+  --transition: 0.3s ease-in-out all;
 }
 
 /*   ----- Reset  -----  */
@@ -47,13 +52,19 @@ body {
   color: var(--fontColor);
 }
 
+a {
+  font-size: inherit;
+  color: inherit;
+}
+
 /*   ----- Header  -----  */
-/* .header {
-  z-index: 11;
-  background: var(--backgroundColor);
-  width: fit-content;
-  height: 100%;
-} */
+.header {
+  /* width: 100%;
+  height: fit-content;
+  z-index: 90;
+  background-color: var(--backgroundColor);
+  overflow: hidden; */
+}
 
 /*   ----- Toggle Button  -----  */
 .toggle-btn {
@@ -94,9 +105,14 @@ body {
 
 .social-links {
   display: flex;
-  gap: var(--smallMargin);
+  /* gap: var(--smallMargin); */
+  gap: 0.3rem;
   align-items: center;
   color: var(--fontColorSecondary);
+}
+
+.social-links > a {
+  transform: var(--transition);
 }
 
 .github-logo {
@@ -104,17 +120,14 @@ body {
   cursor: pointer;
 }
 
-.github-logo:hover {
+.social-links > a:hover {
   color: var(--fontColor);
+  transform: scale(1.1);
 }
 
 .linkedin-logo {
   font-size: 1.1rem;
   cursor: pointer;
-}
-
-.linkedin-logo:hover {
-  color: var(--fontColor);
 }
 
 .roles {
@@ -131,8 +144,8 @@ main {
   height: calc(100vh - 50px);
   margin: var(--mainMargin);
   border-top: 1px solid var(--fontColor);
-  padding: 3.5rem .5rem;
-  overflow: auto;
+  padding: 4rem .5rem;
+  /* overflow: auto; */
   /* position: relative; */
   overflow: hidden;
 }
@@ -211,10 +224,8 @@ footer {
 }
 
 .about-text {
-  /* margin-top: 1.3rem;
-  padding: 0 1rem; */
   padding-left: 15px;
-  margin: 1.3rem 1rem;
+  margin: 42px 1rem 1.3rem;
 }
 
 .skills-container {
@@ -280,7 +291,6 @@ footer {
 }
 
 .category-title {
-  /* font-size: 1.1rem; */
   font-size: 1.2rem;
   font-weight: normal;
   position: relative;
@@ -303,10 +313,7 @@ footer {
   padding: .6rem .25rem;
 
   display: flex;
-  /* justify-content: space-between; */
   gap: 0.1rem;
-  /* display: grid;
-  grid-template-columns: repeat(3, 1fr); */
 }
 
 .skill-wrapper {
@@ -337,13 +344,13 @@ footer {
 .hoverBubble > h3 {
   font-size: .9rem;
   letter-spacing: 1px;
-  color: var(--highlightBlue--dark);
+  /* color: var(--highlightBlue--dark); */
 }
 
 .skill:hover {
-  /* color: var(--fontColor); */
-  color: var(--highlightBlue);
-  transform: scale(1.2);
+  color: var(--fontColor);
+  /* color: var(--highlightBlue); */
+  transform: scale(1.1);
 }
 
 .skill-wrapper > .skill:hover ~ .hoverBubble {
@@ -366,6 +373,7 @@ footer {
   gap: var(--smallMargin);
   position: relative;
   width: fit-content;
+  cursor: pointer;
 }
 
 .btn-text, .btn-text:visited {
@@ -405,31 +413,54 @@ footer {
   margin-bottom: var(--mainMargin);
 }
 
-.about-page > .nav-links {
+.about-page > .nav-links,
+.projects-page > .nav-links,
+.contact-page > .nav-links,
+.resume-page > .nav-links {
   font-size: 1.1rem;
-  /* margin-top: -1.3rem; */
   position: absolute;
   top: 0;
   left: 35px;
 }
 
-.about-page > .nav-links > ul {
+.resume-page > .nav-links {
+  font-size: 0.9rem;
+  top: 2px;
+}
+
+.about-page > .nav-links > ul,
+.projects-page > .nav-links > ul,
+.resume-page > .nav-links > ul {
   display: flex;
   align-items: center;
   gap: 35px;
 }
 
-.about-page > .nav-links > ul > li {
+.resume-page > .nav-links > ul {
+  gap: 20px;
+}
+
+.about-page > .nav-links > ul > li,
+.projects-page > .nav-links > ul > li,
+.resume-page > .nav-links > ul > li {
   position: relative;
 }
 
-.about-page > .nav-links > ul > li:not(:last-child):after {
+.about-page > .nav-links > ul > li:not(:last-child):after,
+.projects-page > .nav-links > ul > li:not(:last-child):after,
+.resume-page > .nav-links > ul > li:not(:last-child):after {
   content: '-';
   position: absolute;
   top: -5px;
   font-size: 1.8rem;
   font-weight: 500;
   padding-left: 0.68rem;
+}
+
+.resume-page > .nav-links > ul > li:not(:last-child):after {
+  font-size: 1.1rem;
+  top: 0;
+  padding-left: 0.3rem;
 }
 
 .nav-links > ul {
@@ -454,28 +485,15 @@ li {
 
 }
 
-.about-page > .nav-links > ul > li > .link {
+.about-page > .nav-links > ul > li > .link,
+.projects-page > .nav-links > ul > li > .link,
+.resume-page > .nav-links > ul > li > .link {
   position: relative;
 }
 
-/* .about-page > .nav-links > ul > li > .link:after {
-  content: '';
-  width: 100%;
-  height: 1px;
-  bottom: -3px;
-  left: 0;
-  background-color: var(--fontColor);
-  position: absolute;
-  transform-origin: bottom left;
-  transition: transform 0.2s ease-out;
-  transform: scaleX(0);
-} */
-
-/* .about-page > .nav-links > ul > li:hover > .link:after {
-  transform: scaleX(1);
-} */
-
-.about-page > .nav-links > ul > li > .link:hover {
+.about-page > .nav-links > ul > li > .link:hover,
+.projects-page > .nav-links > ul > li > .link:hover,
+.resume-page > .nav-links > ul > li > .link:hover {
   transform: none;
 }
 
@@ -483,6 +501,246 @@ li {
   transform: translateX(2%);
 }
 
-.about-page > .nav-links > ul > li:hover {
+.about-page > .nav-links > ul > li:hover,
+.projects-page > .nav-links > ul > li:hover,
+.resume-page > .nav-links > ul > li:hover {
+  transform: none;
+}
+
+/*   ----- Resume  -----  */
+.resume-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  padding: 2.5rem 0 8rem;
+}
+
+.resume-container {
+  width: fit-content;
+  /* margin-top: -9rem; */
+  z-index: 5;
+  overflow: auto;
+}
+
+/*   ----- Projects  -----  */
+.projects-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 2rem;
+}
+
+.projects-container {
+  width: 100%;
+  position: relative;
+  margin-top: 0.5rem;
+}
+
+.projects-container > .line {
+  display: inline-block;
+  height: 1px;
+  width: 100%;
+  background: var(--fontColor);
+}
+
+.projects-header {
+  display: flex;
+  align-items: center;
+  gap: .3rem;
+  position: absolute;
+  top: -2px;
+  left: 5px;
+  background: var(--backgroundColor);
+}
+
+.projects-header > h5 {
+  font-size: 1.6rem;
+  letter-spacing: 1.5px;
+  font-family: var(--navFont);
+  padding: 0 0.15rem;
+}
+
+/*   ----- Carousel Component  -----  */
+.slide {
+  text-align: center;
+  position: absolute;
+  top: 42px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: var(--transition);
+}
+
+.slider-img {
+  width: fit-content;
+  height: 200px;
+  margin: 1rem 0 -0.5rem;
+  object-fit: cover;
+}
+
+.slider-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.slider-name {
+  font-size: 1rem;
+}
+
+.slider-links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+  margin-top: 3px;
+}
+
+.link-logo {
+  font-size: 0.9rem;
+  color: var(--fontColorSecondary);
+}
+
+.link-logo:hover {
+  color: var(--fontColor);
+  transform: scale(1.1);
+} 
+
+.slider-links > .github-logo {
+  margin-top: 6px;
+  font-size: 2.3rem;
+  color: var(--fontColorSecondary);
+}
+
+.slider-links > .github-logo:hover {
+  color: var(--fontColor);
+  transform: scale(1.1);
+}
+
+.slider-stack {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.slider-stack > ul {
+  display: flex;
+  list-style: none;
+  gap: 15px;
+  font-size: 0.7rem;
+  margin: -12px 0 8px;
+  color: var(--fontColorTertiary);
+}
+
+.slider-stack > ul > li {
+  position: relative;
+}
+
+.slider-stack > ul > li:not(:last-child):after {
+  content: "|";
+  position: absolute;
+  right: -10px;
+}
+
+.slider-desc {
+  margin-top: 0.5rem;
+  font-size: 0.9rem;
+  text-align: center;
+  /* padding-left: 0.5rem; */
+}
+
+.prev, .next {
+  position: absolute;
+  top: 400px;
+  height: 1.25rem;
+  font-size: 1.3rem;
+  color: var(--fontColorTertiary);
+  display: grid;
+  place-items: center;
+  border-color: transparent;
+  border-radius: var(--borderRadius);
+  background: transparent;
+  cursor: pointer;
+  transition: var(--transition);
+}
+
+.prev {
+  left: 5px;
+}
+
+.next {
+  right: 5px;
+}
+
+.prev:hover, .next:hover {
+  color: var(--fontColor);
+}
+
+.prev:hover {
+  transform: scale(1.2) translateX(-2px);
+}
+
+.next:hover {
+  transform: scale(1.2) translateX(2px);
+}
+
+/*   ----- Contact  -----  */
+.contact-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 50%;
+}
+
+.contact-container {
+  position: relative;
+  padding-top: 2rem;
+}
+
+.contact-link {
+  position: absolute;
+  /* top: 50%; */
+  left: 50%;
+  font-size: 5rem;
+  color: var(--fontColorTertiary);
+  transform: translateX(-50%);
+  transition: var(--transition);
+}
+
+.contact-link:hover {
+  left: 52%;
+  color: var(--fontColorSecondary);
+}
+
+.contact-page > .nav-links > ul {
+  display: flex;
+  align-items: center;
+  gap: 35px;
+}
+
+.contact-page > .nav-links > ul > li {
+  position: relative;
+}
+
+.contact-page > .nav-links > ul > li:not(:last-child):after {
+  content: '-';
+  position: absolute;
+  top: -5px;
+  font-size: 1.8rem;
+  font-weight: 500;
+  padding-left: 0.68rem;
+}
+
+.contact-page > .nav-links > ul > li > .link {
+  position: relative;
+}
+
+.contact-page > .nav-links > ul > li > .link:hover {
+  transform: none;
+}
+
+.contact-page > .nav-links > ul > li:hover {
   transform: none;
 }
